--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 
 project5/project5.xcodeproj/project.xcworkspace/xcuserdata/huazuo.xcuserdatad/UserInterfaceState.xcuserstate
+project5/project5.xcodeproj/project.xcworkspace/xcuserdata/huazuo.xcuserdatad/UserInterfaceState.xcuserstate
